# qcore

./: .gitignore  .travis.yml  CHANGELOG.md  Jenkinsfile  MANIFEST.in  README.md  download_data.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deptry.yml  git-extension.yml  numpydoc.yml  publish-PyPi.yml  pytest.yml  types.yml  wiki.yml
qcore/: MPIFileHandler.py  archive_structure.py  binary_version.py  bounding_box.py  cli.py  common.py  config.json  config.py  constants.py  coordinates.py  empdb.py  empdb_create.py  fault.py  formats.py  gen_coords.py  geo.py  gmt.py  gmt_test.py  grid.py  gsf.py  im.py  imdb.py  imdb_create.py  mpl.py  nhm.py  nputil.py  point_in_polygon.py  pool_wrapper.py  progress_tracker.py  qclogging.py  registry.py  shakemap_grid.py  shared.py  simulation_structure.py  siteamp_models.py  sosfiltfilt.py  sources.py  src_site_dist.py  srf.py  srf_new.py  (+7 more)
qcore/configs/: machine_local.json  machine_mahuika.json  machine_maui.json  machine_nurion.json  machine_stampede2.json
qcore/data/: download_data.py
qcore/machine_config/: config_bash.json  config_default.json  config_mahuika.json  config_maui.json  config_nesi.json
qcore/registry/: files.py  registry.txt
qcore/siteamp_coefs_files/: 05_eqs-070113eqs184m_suppl_es1_030915.csv  BCS19_ModelCoefs.csv  Boore_ModelCoefs.csv
qcore/source_site_dist/: calculate_rrups_single.py
qcore/test/: runscript.sh
qcore/test/test_bounding_box/: test_bounding_box.py
qcore/test/test_cli/: test_cli.py
qcore/test/test_coordinates/: test_coordinates.py
qcore/test/test_gen_coords/: test_gen_coords.py
qcore/test/test_geo/: test_geo.py
qcore/test/test_grid/: test_grid.py
qcore/test/test_siteamp/: cb_2014_test.csv  test_siteamp.py
qcore/test/test_source_site_dist/: test_src_site_dist_calc.py
qcore/test/test_source_site_dist/sample0/input/: calc_rrup_rjb_locations.npy  calc_rrup_rjb_srf_points.npy  calc_rx_ry_srf_header.P  calc_rx_ry_srf_points.npy
qcore/test/test_source_site_dist/sample0/output/: calc_rrup_rjb_rjb.npy  calc_rrup_rjb_rrup.npy  calc_rx_ry_rx.npy  calc_rx_ry_ry.npy
qcore/test/test_srf/: test_srf.py
qcore/test/test_srf/sample1/output/: cnrs.txt
qcore/test/test_timeseries/: test_timeseries.py
qcore/test/test_xyts/: test_xyts.py
qcore/test/tool/: create_binaryfile.py  utils.py
qcore/uncertainties/: distributions.py  mag_scaling.py
qcore/uncertainties/_superseded/20250126/: mag_scaling_20250126.py
qcore/uncertainties/_superseded/20250126/magnitude_scaling_20250126/: allen_2017.py
qcore/uncertainties/magnitude_scaling/: allen_2017.py  contreras_2022.py  strasser_2010.py  test_2022.py
qcore_utils.egg-info/: PKG-INFO  SOURCES.txt
tests/: amp_bandpass_benchmark.pkl  ampv_bandpassed.npz  cb_2014_test.csv  interpolate_benchmark.pkl  test_archive_structure.py  test_cli.py  test_coordinates.py  test_distributions.py  test_geo.py  test_grid.py  test_nhm.py  test_point_in_polygon.py  test_registry.py  test_shared.py  test_simulation_structure.py  test_siteamp.py  test_src_site_dist.py  test_timeseries.py  test_utils.py  test_xyts.py
tests/sample1/: README.md
wiki/: Bounding-Box.md  Home.md  Sources.md
