[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qcore"
version = "1.2"
description = "QuakeCoRE Library"
authors = [
    {name = "QuakeCoRE" },
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.package-dir]
qcore = "qcore"

[tool.setuptools.package-data]
"qcore" = ["configs/*.json", "data/*", "data/*/*", "data/*/*/*"]

[tool.setuptools.include-package-data]
"qcore" = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff.lint]
extend-select = [
  # isort imports
  "I",
  # Use r'\s+' rather than '\s+'
  "W605",
  # All the naming errors, like using camel case for function names.
  "N",
  # Missing docstrings in classes, methods, and functions
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  # Use f-string instead of a format call
  "UP032",
  # Standard library import is deprecated
  "UP035",
  # Missing function argument type-annotation
  "ANN001",
  # Using except without specifying an exception type to catch
  "BLE001"
]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
    "source_modelling",
    "workflow",
    "pygmt_helper",
    "qcore",
    "empirical",
    "nshmdb",
    "IM_calculation",
    "mera"
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]


