[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qcore-utils"
description = "Utils Library"
authors = [{ name = "ucgmsim" }]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "pandas",
  "pyfftw",
  "pyproj",
  "pooch",
  "scipy",
  "numpy",
  "numba>=0.57.0; python_version == '3.11'",
  "numba>=0.59.0; python_version == '3.12'",
  "numba>=0.61.0; python_version == '3.13'",
  "numba>=0.63.0; python_version == '3.14'",
  "typer",
  "docstring_parser",
  "xarray",
  "pyyaml",
  "typing-extensions>=4.9.0",                # Last change to the @deprecated module
]

[project.optional-dependencies]
test = ["pytest", "hypothesis[numpy]", "pytest-cov"]
types = ["pandas-stubs", "scipy-stubs", "types-PyYAML"]
dev = ["ruff", "deptry", "ty"]

[tool.coverage.run]
omit = ["qcore/constants.py", "qcore/formats.py"]

[tool.setuptools_scm]

[tool.setuptools.package-dir]
qcore = "qcore"

[tool.setuptools.package-data]
"qcore" = ["registry/registry.txt"]

[tool.ruff.lint]
extend-select = [
  # isort imports
  "I",
  # Use r'\s+' rather than '\s+'
  "W605",
  # All the naming errors, like using camel case for function names.
  "N",
  # Missing docstrings in classes, methods, and functions
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  # Use f-string instead of a format call
  "UP032",
  # Standard library import is deprecated
  "UP035",
  # Missing function argument type-annotation
  "ANN001",
  # Using except without specifying an exception type to catch
  "BLE001",
]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
  "source_modelling",
  "workflow",
  "pygmt_helper",
  "qcore",
  "empirical",
  "nshmdb",
  "IM_calculation",
  "mera",
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]
"**/test*.py" = ["D"]


[tool.numpydoc_validation]
checks = [
  "GL05",
  "GL08",
  "GL10",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "PR07",
  "RT01",
  "RT02",
  "RT03",
  "RT04",
  "YD01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$',
]
